--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,8 +4,8 @@ Changelog
 0.0.0 - Initial
 ===============
 
-This is an initial release of kivatikasolrlib supporting capability for
-reformulating JSON data for Kiva using Tika_ and JSON read/write in prep
+This is an initial release of etllib supporting capability for
+reformulating JSON data using Tika_ and JSON read/write in prep
 for ETL using OODT_ into Solr_.
 
 
