--- a/docs/INSTALL.txt
+++ b/docs/INSTALL.txt
@@ -1,7 +1,7 @@
 Installation
 ************
 
-This document tells you how to install kivatikasolrlib.
+This document tells you how to install etllib.
 
 
 Quick Instructions
@@ -9,7 +9,7 @@ Quick Instructions
 
 As a user with administrative privileges, run::
 
-    easy_install kivatikasolrlib
+    easy_install etllib
 
 That's it.
 
@@ -17,7 +17,7 @@ That's it.
 Full Instructions
 =================
 
-kivatikasolrlib requires the Python_ programming language.  We recommend version 2.4
+etllib requires the Python_ programming language.  We recommend version 2.4
 or later.  As of this writing, 2.7 is the latest stable version.  If Python is
 not yet installed on your system, you can find binary and and source
 distributions from the Python website.
@@ -34,18 +34,18 @@ indicating the version of Python installed.  cdx.client also requires `Aptivate
 Tika`_.  Aptivate Tika_ is a Python wrapper around the popular Apache Tika_ text
 analysis toolkit.
 
-By far the easiest, recommended, and encouraged way to install kivatikasolrlib is
+By far the easiest, recommended, and encouraged way to install etllib is
 to use EasyInstall_.  If your Python installation has EasyInstall available to
 it, then this one command is all you need to run in order to download, build,
 install, and generate command-line tools all in one go for all users on your
 system::
 
-    easy_install kivatikasolrlib
+    easy_install etllib
     
 Be sure to run that command as an administrative user.  For example, on Mac OS
 X and other Unix systems, you might need to run::
 
-    sudo easy_install kivatikasolrlib
+    sudo easy_install etllib
 
 That will also download and install all dependencies, including Aptivate Tika.
 
@@ -53,7 +53,7 @@ That will also download and install all dependencies, including Aptivate Tika.
 Executables
 -----------
 
-The commands ``kivarepackageandpost`` and ``kivarepackage`` and ``kivaposter`` 
+The commands ``repackageandpost`` and ``repackage`` and ``poster`` 
 will be generated and placed with your standard installation directory for Python 
 commands.  Usually, this is the same location as the ``python`` executable itself.  
 For example, on Mac OS X 10.8, the directory is::
@@ -84,7 +84,7 @@ Installing Without EasyInstall
 ------------------------------
 
 If EasyInstall is not available on your system, you can still make a proper
-installation of kivatikasolrlib. Follow these instructions:
+installation of etllib. Follow these instructions:
 
 
 1.  Download and install jcc from
@@ -93,11 +93,11 @@ installation of kivatikasolrlib. Follow these instructions:
 2.  Download the Aptivate Python source distribution from
     https://github.com/aptivate/python-tika
     Substitute version numbers as appropriate.
-3.  Download the kivatikasolrlib source distribution from XDATA Git.
+3.  Download the etllib source distribution from https://github.com/chrismattmann/etllib.
     Substitute version numbers as appropriate.
 4.  Unpack each archive.
 5.  Change the current working directory to each newly-created subdirectory,
-    ``kivatikasolrlib``, again substituting version
+    ``etllib``, again substituting version
     numbers as appropriate.
 6.  As an administrative user, run:  ``python setup.py install`` in each
     subdirectory.
@@ -106,7 +106,7 @@ installation of kivatikasolrlib. Follow these instructions:
 Issues and Questions
 ====================
 
-To report any problems with or ask for help about kivatikasolrlib, visit our
+To report any problems with or ask for help about etllib, visit our
 contact_  web page.
 
 
